# daiuchi_chappy_sho

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  arena.yaml  arena.yaml.example  arena_wo_classic.yaml  classic_training.tsv  opening_suite.txt  pyproject.toml
alpha_rl_work/: train_log.jsonl
arena_work/: elo.json  train_log.jsonl
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake  kishi-to-classic  kishi-to-nnue
docs/: alpha.md  evaluation.md  learning_algorithms.md  mcts.md  nnue.md  pretrainded_model.txt  search.md  training.md  usage.md
models/: training_log.txt
src/: alpha_engine.cpp  alpha_engine.h  alpha_main.cpp  alpha_mcts.cpp  alpha_mcts.h  alpha_onnx_inference.cpp  alpha_onnx_inference.h  alpha_usi_protocol.cpp  alpha_usi_protocol.h  csa_protocol.cpp  csa_protocol.h  engine.cpp  engine.h  evaluation.cpp  evaluation.h  gpu_bridge.cpp  gpu_bridge.h  gpu_eval_engine.cpp  gpu_eval_engine.h  gpu_main.cpp  gpu_usi_protocol.cpp  gpu_usi_protocol.h  kifu_learner.cpp  kifu_learner.h  learning.cpp  learning.h  main.cpp  mate_solver.cpp  mate_solver.h  mcts.cpp  mcts.h  mcts_engine.cpp  mcts_engine.h  mcts_main.cpp  mcts_usi_protocol.cpp  mcts_usi_protocol.h  movegen.cpp  movegen.h  nn_bridge.cpp  nn_bridge.h  (+22 more)
tools/: alpha_self_play.py  alpha_train_loop.py  arena.py  cross_train_loop.py  csa_parser.py  export_alpha_onnx.py  export_mlp.py  export_onnx.py  gen_alpha_book.py  gen_book.py  gen_opening_suite.py  gpu_eval.py  index_kifu.py  mcts_label.py  mlp_eval.py  nn_eval.py  nnue_self_play.py  quantize_alpha.py  remote_alpha_loop.ps1  remote_train.ps1  remote_train_alpha.ps1  remote_train_alpha_rl.ps1  remote_train_classic.ps1  remote_train_mlp.ps1  remote_train_nnue.ps1  self_play.py  shogi_gui_sim.py  spsa_tune.py  train.py  train_alpha.py  train_alpha_rl.py  train_alpha_small.py  train_classic.py  train_gpu.py  train_loop.py  train_mlp.py  train_nnue.py
