[project]
name = "learning-shogi-engine-tools"
version = "0.1.0"
description = "Python GPU training tools for learning-shogi-engine"
requires-python = ">=3.10,<3.15"
dependencies = [
    "torch>=2.7.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
